<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SyncData" >

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
		        android:textColor="#ffffff"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
		        android:text="@string/login_username"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
		        android:textColor="#000000"
		        android:background="#ffffff"
                android:id="@+id/editText_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
		        android:textColor="#ffffff"
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
		        android:text="@string/login_password"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
		        android:textColor="#000000"
		        android:background="#ffffff"
                android:id="@+id/editText_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:ems="10"
                android:inputType="textPassword" />

        </TableRow>

        </TableLayout>

            <Button
                android:textColor="#000000"
                android:background="#ffffff"
                android:id="@+id/get_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/login_button" />
            
           <TextView
		        android:textColor="#ffffff"
        		android:id="@+id/result_text_view"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
        		android:textAppearance="?android:attr/textAppearanceLarge"
        		android:text="" />

           <TextView
		        android:textColor="#ffffff"
        		android:id="@+id/create_new_account"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="20dp"
        		android:textAppearance="?android:attr/textAppearanceLarge"
        		android:text="@string/message_newaccount" />

           <Button
                android:textColor="#000000"
                android:background="#ffffff"
				android:id="@+id/button_placelist"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
				android:text="@string/select_target_place" />

           <TextView
				android:textColor="#ffffff"
				android:id="@+id/result_placelist"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
				android:paddingTop="5dp"
				android:paddingBottom="20dp"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceLarge" />

           <CheckBox
				android:textColor="#ffffff"
				android:id="@+id/checkBox_stopgps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
				android:text="@string/stopgps" />
    
           <Button
                android:textColor="#000000"
                android:background="#ffffff"
				android:id="@+id/button_back_application"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
				android:text="@string/back_application" />
</LinearLayout>
